# lits

./: .ghc.environment.x86_64-darwin-9.0.1  .gitignore  cabal.project  hie.yaml  lits.cabal  readme.md
app/: lits.hs
src/: Literals.hs
test/: test.hs
