cabal-version: 2.4
name:          lits
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/lits#readme
bug-reports: https://github.com/tonyday567/lits/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/lits

library
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base >=4.7 && <5,
  exposed-modules:
    Literals

  other-modules:
  default-language: Haskell2010

executable lits
  main-is: lits.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.7 && < 5,
    lits
  default-language: Haskell2010
  default-extensions:

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    doctest >= 0.16 && < 0.19,
    lits
  default-language: Haskell2010
  default-extensions:
